added filter functionality for all parameter

--- a/src/components/Property/Property.css
+++ b/src/components/Property/Property.css
@@ -41,3 +41,10 @@
 .property__image {
     height: 25vh;
 }
+
+
+.pagination__container {
+    display: flex;
+    margin: 5vh auto;
+    justify-content: center;
+}
