--- a/src/components/Property/Property.css
+++ b/src/components/Property/Property.css
@@ -1,6 +1,8 @@
 .properties__homapage {
     padding: 10px;
     background-color: #f5f5f5;
+    min-height: 96vh;
+    height: fit-content;
 }
 
 .filter_property_container {
@@ -9,7 +11,7 @@
     padding: 15px;
     align-items: center;
     justify-content: space-around;
-    border: 2px solid #f5f5f5;
+    border: 2px solid rgba(128, 128, 128, 0.259);
 }
 
 
@@ -25,7 +27,7 @@
 
 .property__card {
     background: #fff;
-    width: 22em;
+    width: 18em;
     border-radius: 0.6em;
     margin: 1em;
     overflow: hidden;
@@ -59,7 +61,16 @@
     .filter__item {
         margin: 10px auto;
     }
-    .properties__cards__container{
+
+    .properties__cards__container {
         grid-template-columns: auto;
+    }
+
+    .property__card {
+        width: 20em;
+    }
+
+    .ant-typography {
+        font-size: 30px !important;
     }
 }
